[package]
edition = "2021"
name = "tpp-bot-beard"
version = "0.1.0"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
dotenv = "0.15.0"
levenshtein = "1.0.5"
poise = { version = "0.6.1", features = ["cache"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "multipart"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_kson = "0.4.1"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
